--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.5.6",
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "astro": "^4.4.15",
-    "@astrojs/check": "^0.5.6",
     "typescript": "^5.4.2"
-  }
+  },
+  "engines": {
+    "npm": "use yarn instead",
+    "yarn": "4.1.1"
+  },
+  "packageManager": "yarn@4.1.1"
 }
