--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "npm": "use yarn instead",
     "yarn": "4.1.1"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "devDependencies": {
+    "prettier": "^2"
+  }
 }
