--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "paths": {
       "@/components/*": ["src/components/*"],
       "@/layouts/*": ["src/layouts/*"],
-      "@/data/*": ["src/data/*"],
+      "@/data/*": ["src/data/*"]
     }
   }
 }
