--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
     "prettier": "^3.3.1",
-    "prettier-plugin-astro": "^0.14.0"
+    "prettier-plugin-astro": "^0.14.0",
+    "sass": "^1.77.5"
   }
 }
