--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "astro": "^4.10.1",
+    "the-new-css-reset": "^1.11.2",
     "typescript": "^5.4.2"
   },
   "engines": {
